crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@functions_in_cairo_m___function_calls.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Functions in Cairo-M - Function Calls"
input_file: mdtest/01-basics/03-functions.md
---
Source:
fn test_calls() -> felt {
    return double(double(5));
}
fn double(x: felt) -> felt {
    return x * 2;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn test_calls {
    entry: 0

    0:
      %0 = call 1(5)
      %1 = call 1(%0)
      return %1

  }

  // Function 1
  fn double {
    parameters: [0]
    entry: 0

    0:
      %1 = %0 * 2
      return %1

  }

}
