crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@functions_in_cairo_m___function_with_parameters.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Functions in Cairo-M - Function with Parameters"
input_file: mdtest/01-basics/03-functions.md
---
Source:
fn add(a: felt, b: felt) -> felt {
    return a + b;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn add {
    parameters: [0, 1]
    entry: 0

    0:
      %2 = %0 Add %1
      return %2

  }

}
