crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@functions_in_cairo_m___function_with_return_values.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Functions in Cairo-M - Function with Return Values"
input_file: mdtest/01-basics/03-functions.md
---
Source:
fn simple() -> felt {
    return 42;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn simple {
    entry: 0

    0:
      return 42

  }

}
