crates/compiler/mir/tests/snapshots/mdtest_mir_snapshots@functions_in_cairo_m___simple_function_2.snap
---
source: crates/compiler/mir/tests/mdtest_snapshots.rs
description: "MIR snapshot for mdtest: Functions in Cairo-M - Simple Function 2"
input_file: mdtest/01-basics/03-functions.md
---
Source:
fn foo() {
    return;
}
============================================================
Generated MIR:
module {
  // Function 0
  fn foo {
    entry: 0

    0:
      return

  }

}
